now we create temporary join for all queries with subqueries to make correct cleunup of tables and avoid too early unlock (BUG#6841)