sql/sql_lex.cc
@@ -135,7 +135,7 @@ void lex_start(THD *thd, uchar *buf,uint length)
   lex->select_lex.link_prev= (st_select_lex_node**)&(lex->all_selects_list);
   lex->select_lex.options= 0;
   lex->describe= 0;
-  lex->derived_tables= FALSE;
+  lex->subqueries= lex->derived_tables= FALSE;
   lex->lock_option= TL_READ;
   lex->found_colon= 0;
   lex->safe_to_cache_query= 1;
